# site-41023130

./: pyproject.toml  server.py
config/: content.htm  content_backup.htm  sitetitle
content/: About.html  Brython.html  HW.html  NX2027 零組件繪圖考試.html  ONSHAPE.html  Solvespace 零組件繪圖考試 Onshape 零組件繪圖考試.html  Solvespace.html  W1 建立GITHUB 建立倉儲-1.html  W1 建立GITHUB 建立倉儲-2.html  W11.html  W7 網路設定與可攜系統 雙網路協定-1.html  W7 網路設定與可攜系統 雙網路協定-2.html  W8 NX2022開啟 ONEHAPE登入-1.html  W8 NX2022開啟 ONEHAPE登入-2.html  index.html  sitemap.html  tipuesearch_content.js  w10.html  w14.html  w15.html  w16.html  w2 放假-1.html  w2 放假-2.html  w3 進入teams 加入會議-1.html  w3 進入teams 加入會議-2.html  w4 打開可攜程式-1.html  w4 打開可攜程式-2.html  w5 更新版本-1.html  w5 更新版本-2.html  w6 NX2022下載 ONEHAPE辦帳密-1.html  w6 NX2022下載 ONEHAPE辦帳密-2.html  w6.html  w8.html  期中.html
downloads/: 1.7z  7.7z  Solvespace.7z  cad2022_final_hw_ref.7z  cad2022_w1-6_questions.7z  onshape.7z  w6 (1).7z  彈珠檯.7z  計算機.7z
downloads/鑽床零件/鑽床零件/: 零件1.prt  零件2.prt
