[tool.poetry]
name = "repl_nix_site-41023130"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pelican = "^4.8.0"
typogrify = "^2.0.7"
Flask-Cors = "^3.0.10"
Jinja2 = "^3.1.2"
pygame = "^2.1.2"
pytest-browser = "^0.2.0"
javascript = "^2015.32.59"
Flask = "^2.2.2"
gevent = "^21.12.0"
pytz = "^2022.2.1"
bs4 = "^0.0.1"
fabric = "^2.7.1"
Pillow = "^9.4.0"
waitress = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
